# MSFSController

./: .gitignore  README.md
MSFSConnect/: CMakeLists.txt
MSFSConnect/include/: Controller.h  MSFSConnection.h  PicoConnection.h  common.h  data.h
MSFSConnect/src/: Controller.cpp  MSFSConnect.cpp  MSFSConnection.cpp  PicoConnection.cpp
PicoConnect/: platformio.ini
PicoConnect/src/: main.cpp
